# advent-of-spin-2024

./: .gitignore  index.html  main.js  spin.toml  styles.css
spin-key-value/: Cargo.toml
spin-key-value-python-wip/: dum.wit  magic.py  requirements.txt
spin-key-value/src/: lib.rs
